fix for adminbar position on small screens

--- a/assets/css/core/normalize.scss
+++ b/assets/css/core/normalize.scss
@@ -6,7 +6,10 @@ html {
 
 body {
 	margin: 0;
-	position: relative;
+
+	@media screen and (min-width: 600px) {
+		position: relative;
+	}
 }
 
 article,
